--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "@types/bootstrap": "^5.2.10",
+    "@types/marked": "^5.0.2",
+    "bootstrap": "^5.3.8",
+    "gsap": "^3.14.2",
+    "marked": "^17.0.1",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
@@ -17,6 +23,7 @@
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.1.4"
   }
 }
