--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
     "@types/marked": "^5.0.2",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "marked": "^17.0.1",
+    "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
