--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "marked": "^17.0.1",
+    "marked-katex-extension": "^5.1.6",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
