--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -8,7 +8,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "ignoreDeprecations": "6.0",
+    // "ignoreDeprecations": "6.0",
     
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "types": ["vite/client"],
