chore: [site] remove deprecated baseUrl from tsconfig

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -4,9 +4,9 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler", 
-    "baseUrl": ".",
+    // "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
     // "ignoreDeprecations": "6.0",
     
