feat: add docker release step for workflow

--- a/.github/workflows/main-ci.yaml
+++ b/.github/workflows/main-ci.yaml
@@ -96,3 +96,21 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.release.outputs.tag }}
+
+      - name: Docker login
+        run: |
+          echo "IMAGE_NAME=tropicalalgae/markoun" >> $GITHUB_ENV
+          echo "IMAGE_VERSION=v$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Docker Release
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
+          IMAGE_VERSION: ${{ env.IMAGE_VERSION }}
+        run: |
+          docker build -t $IMAGE_NAME:$IMAGE_VERSION .
+          docker tag $IMAGE_NAME:$IMAGE_VERSION $IMAGE_NAME:$IMAGE_VERSION 
+          docker tag $IMAGE_NAME:$IMAGE_VERSION $IMAGE_NAME
+
+          docker push $IMAGE_NAME:$IMAGE_VERSION
+          docker push $IMAGE_NAME
