fix: fix Permission denied error in cicd

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
         }
 
         location /media/ {
-            alias /data/;
+            alias /app/data/;
 
             location ~* \.(png|jpg|jpeg|bmp|svg)$ {
                 add_header Cache-Control "public, no-cache";
