--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,16 @@ http {
         listen 80;
         server_name localhost;
 
+        location = /auth_check {
+            internal;
+
+            proxy_pass http://127.0.0.1:8080/api/v1/auth/check;
+            proxy_set_header Cookie $http_cookie;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
+        }
+
         location / {
             root /app/web;
             index index.html index.htm;
@@ -31,6 +41,8 @@ http {
         }
 
         location /media/ {
+            auth_request /auth_check;
+
             alias /app/data/;
 
             location ~* \.(png|jpg|jpeg|bmp|svg)$ {
